background image and contrast fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,8 +30,8 @@
     --background: #e1d3c1;
     --backgroundlight: #f9f4ec;
     --field: #f3e9db;
-    --primary: #57ea83;
-    --secondary: #b3f4b3;
+    --primary: #30cb5f;
+    --secondary: #57ea83;
     --good: #2dad53;
     --bad: #a22a24;
   }
